change name "document" to "publication".
SVN-Revision: 13123

--- a/gov/nih/nci/cananolab/resources/publication.properties
+++ b/gov/nih/nci/cananolab/resources/publication.properties
@@ -6,8 +6,8 @@ errors.range={0} must be an integer number between {1} and {2}.
 errors.date={0} must be a date in the format of MM/dd/yyyy.
 errors.float={0} must be a float number.
 
-message.deleteDocuments=You've successfully deleted the {0} document.
-message.submitPublication.file=The document, titled as, {0}, has been successfully submitted.
+message.deletePublications=You've successfully deleted the {0} publication.
+message.submitPublication.file=The publication, titled as, {0}, has been successfully submitted.
 message.submitPublication.pubmedArticleNotFound=PubMed article not found for the PubMed ID: {0}
 message.submitPublication.pubmedIdRequired=PubMed ID is required to auto populate PubMed article fields.
 message.submitPublication.invalidPubmedId=Invalid PubMed ID. Please enter numeric value for PubMed ID.
@@ -16,14 +16,14 @@ submitPublicationForm.particleNames=Nanoparticle Sample Name
 submitPublicationForm.file.category=Publication Type
 submitPublicationForm.file.status=Publication Status
 submitPublicationForm.file.researchArea=Research Category
-document.title=Title
-document.title.invalid=Document title can not contain special characters.
-document.particleType.invalid=Particle Type can not contain special characters.
-message.searchDocument.noresult=No documents were found for the given parameters
+publication.title=Title
+publication.title.invalid=Publication title can not contain special characters.
+publication.particleType.invalid=Particle Type can not contain special characters.
+message.searchPublication.noresult=No publications were found for the given parameters
 
-message.remoteSearchDocument.noresult=No public documents were found from grid node {0}.
-error.documentException=Document Error: {0}.
-error.noDocumentFile=The document file doesn't exist on the server.
+message.remoteSearchPublication.noresult=No public publications were found from grid node {0}.
+error.publicationException=Publication Error: {0}.
+error.noPublicationFile=The publication file doesn't exist on the server.
 error.grid.discovery=Error in discovering grid nodes.
 error.grid.notAvailable=Error in searching against grid node {0}.
 message.grid.discovery.none=No grid nodes were found for model {0}.
