--- a/src/gov/nih/nci/cananolab/resources/application.properties
+++ b/src/gov/nih/nci/cananolab/resources/application.properties
@@ -33,7 +33,7 @@ error.duplicateEntryException=Duplicate Entries: {0}.
 error.grid.autodiscover=Error in auto-discovering grid nodes.
 error.grid.down={0}
 error.grid.report.query=Error in querying remote reports.
-error.grid.document.query=Error in querying remote documents.
+error.grid.publication.query=Error in querying remote publications.
 error.grid.particle.query=Error in querying remote particles.
 error.grid.protocol.query=Error in querying remote protocols.
 error.nanoparticleCount=Can not get public nanoparticle count from {0}.
