--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -39,6 +39,22 @@
 			<param-value>true</param-value>
 		</init-param>
 	</servlet>
+	<servlet>
+		<servlet-name>QuartzInitializer</servlet-name>
+		<servlet-class>
+			org.quartz.ee.servlet.QuartzInitializerServlet
+		</servlet-class>
+		<init-param>
+			<param-name>shutdown-on-unload</param-name>
+			<param-value>true</param-value>
+		</init-param>
+		<init-param>
+			<param-name>start-scheduler-on-load</param-name>
+			<param-value>false</param-value>
+		</init-param>
+		<!--  has to be started BEFORE SchedulerControllerServlet -->
+		<load-on-startup>1</load-on-startup>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>action</servlet-name>
 		<url-pattern>*.do</url-pattern>
