--- a/gov/nih/nci/cananolab/resources/particle.properties
+++ b/gov/nih/nci/cananolab/resources/particle.properties
@@ -52,7 +52,6 @@ message.addPhysicalCharacterization=You've successfully added physical character
 message.addInvitroCharacterization=You've successfully added in vitro characterization data.
 message.deletePhysicalCharacterization=You've successfully deleted the physical characterization.
 message.deleteInvitroCharacterization=You've successfully deleted the in vitro characterization.
-message.submitReport.file=The report, titled as, {0}, has been successfully updated.
 message.submitPublication.file=The publication , titled as, {0},  has been successfully updated.
 nanoparticleGeneralInfoForm.particleType=Particle Type
 nanoparticleGeneralInfoForm.particleID=Particle ID
@@ -130,7 +129,6 @@ delete.charIds=At least one characterization
 message.searchNanoparticle.secure=You have access to the {0} particles out of total {1} particles for particle type {2}.
 message.searchNanoparticle.noresult=No nanoparticles were found for the given parameters
 message.searchNanoparticle.grid.notAvailable={0} grid node is not available: {1}.
-message.updateReport=You have successfully updated meta data for report: {0}.
 
 message.remoteSearchNanoparticle.noresult=No public nanoparticles were found from grid node {0}.
 message.addFunction=You have successfully saved/updated function data.
@@ -154,3 +152,4 @@ message.grid.discovery.none=No grid nodes were found for model {0}.
 
 particleType.invalid=Particle type can't contain special characters.
 text.invalid=Search text can only contain alphanumeric characters, plus white spaces, quotes, dashes, and underscores.
+publicationKeyword.invalid=Publication keywords can only contain alphanumeric characters, plus white spaces, quotes, dashes, and underscores.
