add keyword and author validation in search publication form
SVN-Revision: 13195

--- a/gov/nih/nci/cananolab/resources/publication.properties
+++ b/gov/nih/nci/cananolab/resources/publication.properties
@@ -27,3 +27,5 @@ error.noPublicationFile=The publication file doesn't exist on the server.
 error.grid.discovery=Error in discovering grid nodes.
 error.grid.notAvailable=Error in searching against grid node {0}.
 message.grid.discovery.none=No grid nodes were found for model {0}.
+authorsStr.invalid=Authors can only contain alphanumeric characters, plus white spaces, quotes, dashes, and underscores.
+keywordsStr.invalid=Keywords can only contain alphanumeric characters, plus white spaces, quotes, dashes, and underscores.
