added <init-param> schedulerIntervalInMinute
SVN-Revision: 13199

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -27,6 +27,10 @@
 			<param-name>detail</param-name>
 			<param-value>3</param-value>
 		</init-param>
+		<init-param>
+			<param-name>schedulerIntervalInMinutes</param-name>
+			<param-value>30</param-value>
+		</init-param>
 		<load-on-startup>0</load-on-startup>
 	</servlet>
 	<servlet>
