--- a/build.xml
+++ b/build.xml
@@ -12,6 +12,12 @@
 	<import file="build-deploy.xml" />
 	<import file="build-grid.xml" />
 
+	<taskdef resource="net/sf/antcontrib/antcontrib.properties">
+		<classpath>
+			<pathelement location="${lib.dir}/cagrid/ant-contrib-1.0b3.jar" />
+		</classpath>
+	</taskdef>
+
 	<target name="clean">
 		<delete dir="${build.dir}" quiet="true" />
 	</target>
@@ -87,9 +93,18 @@
 			</fileset>
 		</copy>
 	</target>
+
 	<target name="build-application" depends="compile">
+		<!-- tag footer with release version and build tag -->
+		<property file="${tmp.dir}/WEB-INF/classes/version.properties" />
+		<property name="build_tag" value="dev" />
+		<propertyregex override="true" property="build_tag" input="${build.tag}" regexp="\$HeadURL\: .*/calab/tags/([^/]*)/.*" select="\1" />
+
+		<replaceregexp file="${tmp.dir}/html/nciFooter.html" match="\{CANANOLAB_RELEASE_VERSION\}" replace="${release.version}" flags="g" />
+		<replaceregexp file="${tmp.dir}/html/nciFooter.html" match="\{CANANOLAB_BUILD_TAG\}" replace="${build_tag}" flags="g" />
+
 		<!-- package WAR file -->
-		<jar destfile="${build.dir}/caNanoLab.war" basedir="${tmp.dir}"/>
+		<jar destfile="${build.dir}/caNanoLab.war" basedir="${tmp.dir}" />
 		<copy todir="${build.dir}">
 			<fileset dir="${conf.dir}/csm/">
 				<include name="*.war" />
@@ -97,6 +112,6 @@
 		</copy>
 
 		<!-- remove tmp directory -->
-		<delete dir="${tmp.dir}" quiet="true" />
+		<!--		<delete dir="${tmp.dir}" quiet="true" />-->
 	</target>
 </project>
