--- a/build.xml
+++ b/build.xml
@@ -98,7 +98,7 @@
 		<!-- tag footer with release version and build tag -->
 		<property file="${tmp.dir}/WEB-INF/classes/version.properties" />
 		<property name="build_tag" value="dev" />
-		<propertyregex override="true" property="build_tag" input="${build.tag}" regexp="\$HeadURL\: .*/calab/tags/([^/]*)/.*" select="\1" />
+		<propertyregex override="true" property="build_tag" input="${build.tag}" regexp="\$HeadURL\: .*/calab/cananolab/tags/([^/]*)/.*" select="\1" />
 
 		<replaceregexp file="${tmp.dir}/html/nciFooter.html" match="\{CANANOLAB_RELEASE_VERSION\}" replace="${release.version}" flags="g" />
 		<replaceregexp file="${tmp.dir}/html/nciFooter.html" match="\{CANANOLAB_BUILD_TAG\}" replace="${build_tag}" flags="g" />
