--- a/.classpath
+++ b/.classpath
@@ -3,42 +3,8 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="com.genuitec.eclipse.j2eedt.core.J2EE14_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/hibernate3.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/spring.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/jdom.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/clm.jar" sourcepath="C:/devel/cananolab_head/web/WEB-INF/lib/clm.jar"/>
 	<classpathentry kind="lib" path="lib/log4j.jar"/>
 	<classpathentry kind="lib" path="lib/servlet.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/csmapi_encrypted.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/struts.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-beanutils-1.7.0.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-digester-1.8.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-fileupload-1.1.1.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-io-1.1.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-validator-1.3.1.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/caNanoLabSDK-beans.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/jakarta-oro.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/displaytag-1.1.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-lang-2.1.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/acegi-security-1.0.4.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/antlr-2.7.6.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/asm.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/c3p0-0.9.0.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/cglib-2.1.3.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-codec-1.3.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-collections-3.2.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-logging-1.1.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/dom4j-1.4.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/ehcache-1.2.2.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/jta.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/sdk-client-framework.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/sdk-core.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/antlr.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/displaytag-export-poi-1.1.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/dwr.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/jstl.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/poi-3.0.1-FINAL-20070705.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/standard.jar"/>
 	<classpathentry kind="lib" path="lib/cagrid/ant-contrib-1.0b3.jar"/>
 	<classpathentry kind="lib" path="lib/cagrid/caGrid-advertisement-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/cagrid/caGrid-caDSR-client-1.2.jar"/>
@@ -147,6 +113,41 @@
 	<classpathentry kind="lib" path="lib/cagrid/CaNanoLabService-service.jar"/>
 	<classpathentry kind="lib" path="lib/cagrid/CaNanoLabService-stubs.jar"/>
 	<classpathentry kind="lib" path="lib/cagrid/CaNanoLabService-tests.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/acegi-security-1.0.4.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/antlr-2.7.6.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/antlr.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/asm.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/c3p0-0.9.0.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/caNanoLabSDK-beans.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/cglib-2.1.3.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-beanutils-1.7.0.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-codec-1.3.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-collections-3.2.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-digester-1.8.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-fileupload-1.1.1.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-io-1.1.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-lang-2.1.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-logging-1.1.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-validator-1.3.1.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/displaytag-1.1.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/displaytag-export-poi-1.1.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/dom4j-1.4.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/dwr.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/ehcache-1.2.2.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/hibernate3.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/jakarta-oro.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/jdom.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/jstl.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/jta.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/poi-3.0.1-FINAL-20070705.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/quartz-1.6.0.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/sdk-client-framework.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/sdk-core.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/spring.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/standard.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/struts.jar"/>
+	<classpathentry kind="lib" path="conf/mysql-connector-java-5.0.7-bin.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/clm-4.1.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/csmapi-4.1.jar"/>
 	<classpathentry kind="output" path="web/WEB-INF/classes"/>
 </classpath>
