--- a/src/gov/nih/nci/cananolab/resources/pointOfContact.properties
+++ b/src/gov/nih/nci/cananolab/resources/pointOfContact.properties
@@ -22,6 +22,7 @@ publication.particleType.invalid=Particle Type can not contain special character
 message.searchPublication.noresult=No publications were found for the given parameters
 
 message.remoteSearchPublication.noresult=No public publications were found from grid node {0}.
+error.duplicatePointOfContact=The Point of Contact name is already in use.  Please type in a different one 
 error.publicationException=Publication Error: {0}.
 error.noPublicationFile=The publication file doesn't exist on the server.
 error.grid.discovery=Error in discovering grid nodes.
