change organization to POC
SVN-Revision: 14093

--- a/src/gov/nih/nci/cananolab/resources/particle.properties
+++ b/src/gov/nih/nci/cananolab/resources/particle.properties
@@ -14,7 +14,7 @@ error.composition=Nanoparticle Sample Composition Error: {0}
 error.characterization=Nanoparticle Sample Characterization Error: {0}
 
 message.submitNanoparticleSample=You've successfully created the following nanoparticle sample to be visible for groups {0}.
-nanoparticleSampleForm.sampleOrganization=Primary Organization 
+nanoparticleSampleForm.pointOfContact=Primary Point of Contact 
 nanoparticleSampleForm.sampleName=Nanoparticle Sample Name 
 error.duplicateNanoparticleSample=The nanoparticle sample name is already in use.  Please type in a different one 
 
