--- a/src/gov/nih/nci/cananolab/resources/common.properties
+++ b/src/gov/nih/nci/cananolab/resources/common.properties
@@ -11,3 +11,4 @@ error.grid.discovery=Error in discovering grid nodes.
 error.grid.notAvailable=Error in searching against grid node {0}.
 message.grid.discovery.none=No grid nodes were found for model {0}.
 submitPointOfContactForm.organizationName=Organization Name
+pointOfContact.updateOtherPOC=You will need to update particle sample if you have add or remove the secondary point of contacts
