--- a/src/gov/nih/nci/cananolab/resources/particle.properties
+++ b/src/gov/nih/nci/cananolab/resources/particle.properties
@@ -153,4 +153,4 @@ message.grid.discovery.none=No grid nodes were found for model {0}.
 particleType.invalid=Particle type can't contain special characters.
 text.invalid=Search text can only contain alphanumeric characters, plus white spaces, quotes, dashes, and underscores.
 publicationKeyword.invalid=Publication keywords can only contain alphanumeric characters, plus white spaces, quotes, dashes, and underscores.
-pointOfContact.updateOtherPOC=You will need to update particle sample if you have add or remove the secondary point of contacts
+pointOfContact.updateOtherPOC=You will need to update particle sample if you have added or removed the secondary point of contacts
