updated for technique and instruments
SVN-Revision: 14360

--- a/src/gov/nih/nci/cananolab/resources/particle.properties
+++ b/src/gov/nih/nci/cananolab/resources/particle.properties
@@ -14,15 +14,15 @@ error.composition=Nanoparticle Sample Composition Error: {0}
 error.characterization=Nanoparticle Sample Characterization Error: {0}
 
 message.submitNanoparticleSample=You've successfully created the following nanoparticle sample to be visible for groups {0}.
-nanoparticleSampleForm.pointOfContact=Primary Point of Contact 
-nanoparticleSampleForm.sampleName=Nanoparticle Sample Name 
-error.duplicateNanoparticleSample=The nanoparticle sample name is already in use.  Please type in a different one 
+nanoparticleSampleForm.pointOfContact=Primary Point of Contact
+nanoparticleSampleForm.sampleName=Nanoparticle Sample Name
+error.duplicateNanoparticleSample=The nanoparticle sample name is already in use.  Please type in a different one
 
 message.deletePublications=You've successfully deleted the {0} publication.
 message.addParticleComposition=You've successfully added composition data.
 message.addNanoparticleEntity=You've successfully added nanoparticle entity data.
 message.deleteNanoparticleEntity=You've successfully deleted the nanoparticle entity.
-message.inherentFunctionType=Inherent 
+message.inherentFunctionType=Inherent
 message.addFunctionalizingEntity=You've successfully added functionalizing entity data.
 message.deleteFunctionalizingEntity=You've successfully deleted the functionalizing entity.
 message.addChemicalAssociation=You've successfully added chemical association data.
@@ -75,7 +75,7 @@ nanoparticleEntityForm.carbonNanotube.averageLength=Average Length
 nanoparticleEntityForm.fullerene.numberOfCarbon=Number of Carbon
 nanoparticleEntityForm.biopolymer.name=Biopolymer Name
 nanoparticleEntityForm.biopolymer.type=Biopolymer Type
-nanoparticleEntityForm.liposome.polymerName=Polymer Name 
+nanoparticleEntityForm.liposome.polymerName=Polymer Name
 nanoparticleEntityForm.emulsion.polymerName=Polymer Name
 nanoparticleEntityForm.polymer.crossLinkDegree=Polymer Cross Link Degree
 nanoparticleEntityForm.elementType=Composing Element Type
@@ -97,7 +97,7 @@ type=Type
 nanoparticleEntityForm.dendrimer.generation=Generation
 nanoparticleEntityForm.polymer.crosslinkDegree=Crosslink Degree
 
-achar.instrument.type=When description is entered for instrument configuration, instrument type
+achar.technique.type=When entering technique and instrument information, Technique Type
 achar.instrument.manufacturer=When instrument type is entered, manufacturer
 
 loadDerivedBioAssayDataForm.title=Characterization File Title
