updated addCharacterization message
SVN-Revision: 14662

--- a/src/gov/nih/nci/cananolab/resources/particle.properties
+++ b/src/gov/nih/nci/cananolab/resources/particle.properties
@@ -117,7 +117,7 @@ shape.maxDimension=Maximum Dimension value
 shape.type=Shape Type
 morphology.type=Morphology Type
 
-message.addCharacterization=You have successfully saved/updated {0} characterization data.
+message.addCharacterization=You have successfully saved/updated {0} characterization.
 
 function.linkageType=Linkage Type
 function.linkage.agentType=Linkage Agent Type
