added message for remove columns and remove rows in a data matrix
SVN-Revision: 15074

--- a/src/gov/nih/nci/cananolab/resources/particle.properties
+++ b/src/gov/nih/nci/cananolab/resources/particle.properties
@@ -118,7 +118,8 @@ shape.type=Shape Type
 morphology.type=Morphology Type
 
 message.addCharacterization=You have successfully saved/updated {0} characterization.
-
+message.addCharacterization.removeMatrixColumn=To remove a column, please select a column first.
+message.addCharacterization.removeMatrixRow=To remove a row, please click on the delete button next to the row.
 function.linkageType=Linkage Type
 function.linkage.agentType=Linkage Agent Type
 
