--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -13,6 +13,7 @@
 			<param-name>config</param-name>
 			<param-value>
 				/WEB-INF/struts-config.xml,
+				/WEB-INF/struts-config-admin.xml,
 				/WEB-INF/struts-config-protocol.xml,
 				/WEB-INF/struts-config-sample.xml,
 				/WEB-INF/struts-config-publication.xml
