added message for chemical association form
SVN-Revision: 15471

--- a/src/gov/nih/nci/cananolab/resources/particle.properties
+++ b/src/gov/nih/nci/cananolab/resources/particle.properties
@@ -25,6 +25,7 @@ message.deleteNanomaterialEntity=You've successfully deleted the nanoparticle en
 message.inherentFunctionType=Inherent
 message.addFunctionalizingEntity=You've successfully added functionalizing entity data.
 message.deleteFunctionalizingEntity=You've successfully deleted the functionalizing entity.
+message.nullComposition=You need to create at least one nanomaterial entity or one functionalizing entity first.
 message.addChemicalAssociation=You've successfully added chemical association data.
 message.deleteChemicalAssociation=You've successfully deleted the chemical association.
 error.removeComposingElementWithChemicalAssociation=The composing element is used in a chemical association.  Please delete the chemcial association first before removing the composing element.
