updated chemical association messages
SVN-Revision: 15504

--- a/src/gov/nih/nci/cananolab/resources/particle.properties
+++ b/src/gov/nih/nci/cananolab/resources/particle.properties
@@ -13,33 +13,31 @@ error.particle=Nanoparticle Sample Error: {0}
 error.composition=Nanoparticle Sample Composition Error: {0}
 error.characterization=Nanoparticle Sample Characterization Error: {0}
 
-message.submitNanoparticleSample=You've successfully created the following nanoparticle sample to be visible for groups {0}.
+message.submitNanoparticleSample=You've successfully created the following sample to be visible for groups {0}.
 nanoparticleSampleForm.pointOfContact=Primary Point of Contact
 nanoparticleSampleForm.sampleName=Nanoparticle Sample Name
-error.duplicateNanoparticleSample=The nanoparticle sample name is already in use.  Please type in a different one
+error.duplicateNanoparticleSample=The sample name is already in use.  Please type in a different one
 
 message.deletePublications=You've successfully deleted the {0} publication.
 message.addParticleComposition=You've successfully added composition data.
-message.addNanomaterialEntity=You've successfully added nanoparticle entity data.
-message.deleteNanomaterialEntity=You've successfully deleted the nanoparticle entity.
+message.addNanomaterialEntity=You've successfully added nanomaterial entity data.
+message.deleteNanomaterialEntity=You've successfully deleted the nanomaterial entity.
 message.inherentFunctionType=Inherent
 message.addFunctionalizingEntity=You've successfully added functionalizing entity data.
 message.deleteFunctionalizingEntity=You've successfully deleted the functionalizing entity.
 message.nullComposition=You need to create at least one nanomaterial entity or one functionalizing entity first.
+message.emptyMaterialsEntitiesInAssociation=You need to add a nanomaterial entity with a composing element before adding chemical association data.
+message.emptyComposingElementsInAssociation=You need to add a composing element in a nanomaterial entity before adding chemical association data.
+message.oneComposingElementsInAssociation=You need at least two composing elements to add a chemical association if you don't have functionalizing entity data.
+message.emptyFunctionalizingEntityInAssociation=You need to add a functionalizing entity before you can add chemical association between a functionalizing entity and a nanomaterial entity composing element.
 message.addChemicalAssociation=You've successfully added chemical association data.
 message.deleteChemicalAssociation=You've successfully deleted the chemical association.
 error.removeComposingElementWithChemicalAssociation=The composing element is used in a chemical association.  Please delete the chemcial association first before removing the composing element.
-error.deleteNanomaterialEntityWithChemicalAssociation=The nanoparticle entity {0} contains a composing element that is used in a chemical association.  Please delete the chemcial association first before deleting the nanoparticle entity.
+error.deleteNanomaterialEntityWithChemicalAssociation=The nanomaterial entity {0} contains a composing element that is used in a chemical association.  Please delete the chemcial association first before deleting the nanomaterial entity.
 error.deleteFunctionalizingEntityWithChemicalAssociation=The functionalizing entity {0} is used in a chemical association.  Please delete the chemcial association first before deleting the functionalizing entity.
 message.addCompositionFile=You've successfully added a composition file {0}.
 message.deleteCompositionFile=You've successfully deleted the composition file.
-
 message.deleteAnnotations=You've successfully deleted the {0} data.
-
-empty.particleEntitiesInAssociation=You need to add a nanoparticle entity with a composing element before adding chemical association data.
-empty.composingElementsInAssociation=You need to add a composing element in a nanoparticle entity before adding chemical association data.
-one.composingElementsInAssociation=You need at least two composing elements to add a chemical association if you don't have functionalizing entity data.
-empty.functionalizingEntityInAssociation=You need to add a functionalizing entity before you can add chemical association between a functionalizing entity and a nanoparticle entity composing element.
 error.duplicateAssociatedElementsInAssociation=The two associated elements can not be the same.
 
 uploadedFile=Uploading a file
