--- a/src/gov/nih/nci/cananolab/resources/admin.properties
+++ b/src/gov/nih/nci/cananolab/resources/admin.properties
@@ -2,4 +2,4 @@
 admin.sitePreference.success=Site preference has been updated successfully.
 admin.sitePreference.error.siteName=Error in updating site name.
 admin.sitePreference.error.siteLogo=Error in updating site logo.
-admin.sitePreference.error.logoOversize=Size of site logo file cannot be larger than {0} bytes.
+admin.sitePreference.error.logoTooLarge=Size of site logo file cannot be larger than {0} bytes.
