--- a/.classpath
+++ b/.classpath
@@ -114,20 +114,16 @@
 	<classpathentry kind="lib" path="lib/cagrid/CaNanoLabService-stubs.jar"/>
 	<classpathentry kind="lib" path="lib/cagrid/CaNanoLabService-tests.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/acegi-security-1.0.4.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/antlr-2.7.6.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/antlr.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/asm.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/c3p0-0.9.0.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/caNanoLabSDK-beans.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/cglib-2.1.3.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-beanutils-1.7.0.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-codec-1.3.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-collections-3.2.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-digester-1.8.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-fileupload-1.1.1.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-io-1.1.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-lang-2.1.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-logging-1.1.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-validator-1.3.1.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/displaytag-1.1.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/displaytag-export-poi-1.1.jar"/>
@@ -137,17 +133,30 @@
 	<classpathentry kind="lib" path="web/WEB-INF/lib/hibernate3.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/jakarta-oro.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/jdom.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/jstl.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/jta.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/poi-3.0.1-FINAL-20070705.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/quartz-1.6.0.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/sdk-client-framework.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/sdk-core.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/spring.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/standard.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/struts.jar"/>
 	<classpathentry kind="lib" path="conf/mysql-connector-java-5.0.7-bin.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/clm-4.1.jar"/>
 	<classpathentry kind="lib" path="web/WEB-INF/lib/csmapi-4.1.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-beanutils-1.8.0.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/antlr-2.7.2.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/bsf-2.3.0.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-chain-1.2.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-logging-1.0.4.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/oro-2.0.8.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/struts-core-1.3.10.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/struts-el-1.3.10.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/struts-extras-1.3.10.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/struts-faces-1.3.10.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/struts-mailreader-dao-1.3.10.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/struts-scripting-1.3.10.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/struts-taglib-1.3.10.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/struts-tiles-1.3.10.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/jstl.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/standard.jar"/>
 	<classpathentry kind="output" path="web/WEB-INF/classes"/>
 </classpath>
