--- a/src/gov/nih/nci/cananolab/resources/particle.properties
+++ b/src/gov/nih/nci/cananolab/resources/particle.properties
@@ -51,6 +51,8 @@ message.addPhysicalCharacterization=You've successfully added physical character
 message.addInvitroCharacterization=You've successfully added in vitro characterization data.
 message.deletePhysicalCharacterization=You've successfully deleted the physical characterization.
 message.deleteInvitroCharacterization=You've successfully deleted the in vitro characterization.
+message.deleteInvitroCharacterization=You've successfully deleted the in vivo characterization.
+message.deleteCharacterization=You've successfully deleted the characterization.
 message.submitPublication.file=The publication , titled as, {0},  has been successfully updated.
 nanoparticleGeneralInfoForm.particleType=Particle Type
 nanoparticleGeneralInfoForm.particleID=Particle ID
@@ -127,7 +129,7 @@ message.delete.characterization=You've successfully deleted the characterization
 delete.charIds=At least one characterization
 
 message.searchNanoparticle.secure=You have access to the {0} particles out of total {1} particles for particle type {2}.
-message.searchNanoparticle.noresult=No nanoparticles were found for the given parameters
+message.searchNanoparticle.noresult=No nanoparticles were found for the given parameters.
 message.searchNanoparticle.grid.notAvailable={0} grid node is not available: {1}.
 
 message.remoteSearchNanoparticle.noresult=No public nanoparticles were found from grid node {0}.
