Update error message for sample search, replace "nanoparticle" with "sample".
SVN-Revision: 15762

--- a/src/gov/nih/nci/cananolab/resources/particle.properties
+++ b/src/gov/nih/nci/cananolab/resources/particle.properties
@@ -50,7 +50,6 @@ message.invalidNumber=Invalid number has been converted to 0.
 message.addPhysicalCharacterization=You've successfully added physical characterization data.
 message.addInvitroCharacterization=You've successfully added in vitro characterization data.
 message.deletePhysicalCharacterization=You've successfully deleted the physical characterization.
-message.deleteInvitroCharacterization=You've successfully deleted the in vitro characterization.
 message.deleteInvitroCharacterization=You've successfully deleted the in vivo characterization.
 message.deleteCharacterization=You've successfully deleted the characterization.
 message.submitPublication.file=The publication , titled as, {0},  has been successfully updated.
@@ -128,8 +127,8 @@ message.delete.no.characterizations=There are no characterizations to delete.
 message.delete.characterization=You've successfully deleted the characterization data.
 delete.charIds=At least one characterization
 
-message.searchNanoparticle.secure=You have access to the {0} particles out of total {1} particles for particle type {2}.
-message.searchNanoparticle.noresult=No nanoparticles were found for the given parameters.
+message.searchNanoparticle.secure=You have access to the {0} samples out of total {1} samples for sample type {2}.
+message.searchNanoparticle.noresult=No samples were found for the given parameters.
 message.searchNanoparticle.grid.notAvailable={0} grid node is not available: {1}.
 
 message.remoteSearchNanoparticle.noresult=No public nanoparticles were found from grid node {0}.
