--- a/src/gov/nih/nci/cananolab/resources/particle.properties
+++ b/src/gov/nih/nci/cananolab/resources/particle.properties
@@ -14,8 +14,8 @@ error.composition=Nanoparticle Sample Composition Error: {0}
 error.characterization=Nanoparticle Sample Characterization Error: {0}
 
 message.submitNanoparticleSample=You've successfully created the following sample to be visible for groups {0}.
-nanoparticleSampleForm.pointOfContact=Primary Point of Contact
-nanoparticleSampleForm.sampleName=Nanoparticle Sample Name
+sampleForm.pointOfContact=Primary Point of Contact
+sampleForm.sampleName=Sample Name
 error.duplicateNanoparticleSample=The sample name is already in use.  Please type in a different one
 
 message.deletePublications=You've successfully deleted the {0} publication.
