added ; at the end of last option
SVN-Revision: 15823

--- a/conf/standalone/login.config
+++ b/conf/standalone/login.config
@@ -6,5 +6,5 @@ url="jdbc:mysql://DATABASE_HOST:DATABASE_PORT/canano"
 user="DATABASE_USER"
 passwd="DATABASE_PASSWORD"
 query="SELECT * FROM csm_user WHERE LOGIN_NAME=? and PASSWORD=?"
-encryption-enabled="YES"
+encryption-enabled="YES";
 };
