combine poc resource to sample resource
SVN-Revision: 15855

--- a/src/gov/nih/nci/cananolab/resources/particle.properties
+++ b/src/gov/nih/nci/cananolab/resources/particle.properties
@@ -97,6 +97,8 @@ type=Type
 nanoparticleEntityForm.dendrimer.generation=Generation
 nanoparticleEntityForm.polymer.crosslinkDegree=Crosslink Degree
 
+achar.characterizationType=Characterization Type
+achar.characterizationName=Characterization Name
 achar.technique.type=When entering technique and instrument information, Technique Type
 achar.instrument.manufacturer=When instrument type is entered, manufacturer
 
@@ -154,4 +156,20 @@ message.grid.discovery.none=No grid nodes were found for model {0}.
 particleType.invalid=Particle type can't contain special characters.
 text.invalid=Search text can only contain alphanumeric characters, plus white spaces, quotes, dashes, and underscores.
 publicationKeyword.invalid=Publication keywords can only contain alphanumeric characters, plus white spaces, quotes, dashes, and underscores.
-pointOfContact.updateOtherPOC=You will need to update particle sample if you have added or removed the secondary point of contacts
+
+
+# Point of Contact messages
+errors.required={0} is required.
+errors.invalid={0} is invalid.
+errors.integer={0} must be an integer number.
+errors.range={0} must be an integer number between {1} and {2}.
+errors.date={0} must be a date in the format of MM/dd/yyyy.
+errors.float={0} must be a float number.
+
+error.pointOfContact==Error in saving the Point of Contact.
+error.duplicatePointOfContact=The Point of Contact name is already in use.  Please type in a different one 
+error.grid.discovery=Error in discovering grid nodes.
+error.grid.notAvailable=Error in searching against grid node {0}.
+message.grid.discovery.none=No grid nodes were found for model {0}.
+submitPointOfContactForm.organizationName=Organization Name
+pointOfContact.updateOtherPOC=You will need to update particle sample if you have add or remove the secondary point of contacts
