updated message for POC
SVN-Revision: 15860

--- a/src/gov/nih/nci/cananolab/resources/particle.properties
+++ b/src/gov/nih/nci/cananolab/resources/particle.properties
@@ -15,6 +15,7 @@ error.characterization=Nanoparticle Sample Characterization Error: {0}
 
 message.submitNanoparticleSample=You've successfully created the following sample to be visible for groups {0}.
 sampleForm.pointOfContact=Primary Point of Contact
+message.deletePrimaryPOC=Can not delete the primary POC.  You can edit the information.
 sampleForm.sampleName=Sample Name
 error.duplicateNanoparticleSample=The sample name is already in use.  Please type in a different one
 
@@ -157,19 +158,7 @@ particleType.invalid=Particle type can't contain special characters.
 text.invalid=Search text can only contain alphanumeric characters, plus white spaces, quotes, dashes, and underscores.
 publicationKeyword.invalid=Publication keywords can only contain alphanumeric characters, plus white spaces, quotes, dashes, and underscores.
 
-
-# Point of Contact messages
-errors.required={0} is required.
-errors.invalid={0} is invalid.
-errors.integer={0} must be an integer number.
-errors.range={0} must be an integer number between {1} and {2}.
-errors.date={0} must be a date in the format of MM/dd/yyyy.
-errors.float={0} must be a float number.
-
 error.pointOfContact==Error in saving the Point of Contact.
-error.duplicatePointOfContact=The Point of Contact name is already in use.  Please type in a different one 
-error.grid.discovery=Error in discovering grid nodes.
-error.grid.notAvailable=Error in searching against grid node {0}.
-message.grid.discovery.none=No grid nodes were found for model {0}.
-submitPointOfContactForm.organizationName=Organization Name
+error.duplicatePointOfContact=The Point of Contact name is already in use.  Please type in a different one
+sampleForm.organizationName=Organization Name
 pointOfContact.updateOtherPOC=You will need to update particle sample if you have add or remove the secondary point of contacts
