Add message to save sample operation.
SVN-Revision: 15869

--- a/src/gov/nih/nci/cananolab/resources/particle.properties
+++ b/src/gov/nih/nci/cananolab/resources/particle.properties
@@ -13,12 +13,13 @@ error.particle=Nanoparticle Sample Error: {0}
 error.composition=Nanoparticle Sample Composition Error: {0}
 error.characterization=Nanoparticle Sample Characterization Error: {0}
 
-message.submitNanoparticleSample=You've successfully created the following sample to be visible for groups {0}.
 sampleForm.pointOfContact=Primary Point of Contact
 message.deletePrimaryPOC=Can not delete the primary POC.  You can edit the information.
 sampleForm.sampleName=Sample Name
 error.duplicateNanoparticleSample=The sample name is already in use.  Please type in a different one
 
+message.createSample=You've successfully created the sample.
+message.updateSample=You've successfully updated the sample.
 message.deletePublications=You've successfully deleted the {0} publication.
 message.addParticleComposition=You've successfully added composition data.
 message.addNanomaterialEntity=You've successfully added nanomaterial entity data.
