added POC message
SVN-Revision: 15911

--- a/src/gov/nih/nci/cananolab/resources/particle.properties
+++ b/src/gov/nih/nci/cananolab/resources/particle.properties
@@ -16,6 +16,7 @@ error.characterization=Nanoparticle Sample Characterization Error: {0}
 sampleForm.pointOfContact=Primary Point of Contact
 message.deletePrimaryPOC=Can not delete the primary POC.  You can edit the information.
 sampleForm.sampleName=Sample Name
+sampleForm.primaryPOC=Primary Point of Contact
 error.duplicateNanoparticleSample=The sample name is already in use.  Please type in a different one
 
 message.createSample=You've successfully created the sample.
