--- a/src/gov/nih/nci/cananolab/resources/publication.properties
+++ b/src/gov/nih/nci/cananolab/resources/publication.properties
@@ -13,9 +13,9 @@ message.submitPublication.pubmedIdRequired=PubMed ID is required to auto populat
 message.submitPublication.invalidPubmedId=Invalid PubMed ID. Please enter numeric value for PubMed ID.
 submitPublicationForm.particleID=Particle ID
 submitPublicationForm.sampleNames=Nanoparticle Sample Name
-submitPublicationForm.file.category=Publication Type
-submitPublicationForm.file.status=Publication Status
-submitPublicationForm.file.researchArea=Research Category
+submitPublicationForm.publication.category=Publication Type
+submitPublicationForm.publication.status=Publication Status
+submitPublicationForm.publication.researchArea=Research Category
 publication.title=Title
 publication.title.invalid=Publication title can not contain special characters.
 publication.particleType.invalid=Particle Type can not contain special characters.
