added duplicate error
SVN-Revision: 15987

--- a/src/gov/nih/nci/cananolab/resources/publication.properties
+++ b/src/gov/nih/nci/cananolab/resources/publication.properties
@@ -20,7 +20,7 @@ publication.title=Title
 publication.title.invalid=Publication title can not contain special characters.
 publication.particleType.invalid=Particle Type can not contain special characters.
 message.searchPublication.noresult=No publications were found for the given parameters
-
+error.duplicatePublication=Publication already exists {0}.
 message.remoteSearchPublication.noresult=No public publications were found from grid node {0}.
 error.publicationException=Publication Error: {0}.
 error.noPublicationFile=The publication file doesn't exist on the server.
