--- a/src/gov/nih/nci/cananolab/resources/sample.properties
+++ b/src/gov/nih/nci/cananolab/resources/sample.properties
@@ -1,83 +1,156 @@
-# sample messages
+# submit messages
 errors.required={0} is required.
 errors.invalid={0} is invalid.
 errors.integer={0} must be an integer number.
 errors.range={0} must be an integer number between {1} and {2}.
 errors.date={0} must be a date in the format of MM/dd/yyyy.
 errors.float={0} must be a float number.
+error.booleanValue={0}  must be 'true'/'false' or '0'/'1'.
+errors.invalidOtherType='{0}' is an invalid {1} type. It is a pre-defined composition type.
 
-createSampleForm.sampleNamePrefix=Sample ID prefix
-createSampleForm.dateReceived=The date received
-createSampleForm.sampleType=Sample Type
-createSampleForm.sampleSource=Source
-createSampleForm.otherSampleSource=Other sample source
-createSampleForm.lotId=Lot ID
-createSampleForm.numberOfContainers=The number of containers
-createSampleForm.containerType=Container type
-createSampleForm.otherContainerType=Container type 
-createSampleForm.otherContainerType=Other container type
-createSampleForm.quantity=The container quantity
-createSampleForm.concentration=The container concentration
-createSampleForm.volume=The container volume
-createSampleForm.quantityUnit=The container quantity unit
-createSampleForm.concentrationUnit=The container concentration unit
-createSampleForm.volumeUnit=The container volume unit
-createSampleForm.solventConcentration=When solvent is entered, concentration
-createSampleForm.concentrationSolvent=When concentration is entered, solvent
-createSampleForm.otherRoom=Other Room
-createSampleForm.otherFreezer=Other Freezer
-createSampleForm.otherShelf=Other Shelf
-createSampleForm.otherBox=Other Box
-error.createSample.duplicate=Please use a different sample name: {0}.
-error.createSample.SampleIDFormat=Sample ID prefix must be in a format of {0}X, which X is a numeric number
+error.derivedDatumValue={0} must be a float number or true/false for value type of boolean.
+error.particle=Nanomaterial Sample Error: {0}
+error.composition=Nanomaterial Sample Composition Error: {0}
+error.characterization=Nanomaterial Sample Characterization Error: {0}
 
-createAliquotForm.sampleName=When creating aliquots from samples, sampe ID
-createAliquotForm.containerName=When creating aliquots from sample containers, container ID
-createAliquotForm.parentAliquotName=When creating aliquots from aliquots, aliquot ID
-createAliquotForm.containerType=Container type
-createAliquotForm.otherContainerType=Other container type
-createAliquotForm.quantity=The container quantity
-createAliquotForm.concentration=The container concentration
-createAliquotForm.volume=The container volume
-createAliquotForm.numberOfAliquots=The number of aliquots
-createAliquotForm.quantityUnit=The container quantity unit
-createAliquotForm.concentrationUnit=The container concentration unit
-createAliquotForm.volumeUnit=The container volume unit
-createAliquotForm.solventConcentration=When solvent is entered, concentration
-createAliquotForm.concentrationSolvent=When concentration is entered, solvent
-createAliquotForm.otherRoom=Other Room
-createAliquotForm.otherFreezer=Other Freezer
-createAliquotForm.otherShelf=Other Shelf
-createAliquotForm.otherBox=Other Box
+sampleForm.pointOfContact=Primary Point of Contact
+message.deletePrimaryPOC=Can not delete the primary POC.  You can edit the information.
+sampleForm.sampleName=Sample Name
+sampleForm.primaryPOC=Primary Point of Contact
+error.duplicateSample=The sample name is already in use.  Please type in a different one
 
-message.createAliquot=You've successfully created the following aliquots.
-error.createAliquot.nomatrix=Error in saving aliquots: {0}.
-error.createAliquot.duplicate=Please use a different aliquot name: {0}.
+message.createSample=You've successfully created the sample.
+message.updateSample=You've successfully updated the sample.
+message.deletePublications=You've successfully deleted the {0} publication.
+message.addParticleComposition=You've successfully added composition data.
+message.addNanomaterialEntity=You've successfully added nanomaterial entity data.
+message.deleteNanomaterialEntity=You've successfully deleted the nanomaterial entity.
+message.inherentFunctionType=Inherent
+message.addFunctionalizingEntity=You've successfully added functionalizing entity data.
+message.deleteFunctionalizingEntity=You've successfully deleted the functionalizing entity.
+message.nullComposition=You need to create at least one nanomaterial entity or one functionalizing entity first.
+message.emptyMaterialsEntitiesInAssociation=You need to add a nanomaterial entity with a composing element before adding chemical association data.
+message.emptyComposingElementsInAssociation=You need to add a composing element in a nanomaterial entity before adding chemical association data.
+message.oneComposingElementsInAssociation=You need at least two composing elements to add a chemical association if you don't have functionalizing entity data.
+message.emptyFunctionalizingEntityInAssociation=You need to add a functionalizing entity before you can add chemical association between a functionalizing entity and a nanomaterial entity composing element.
+message.addChemicalAssociation=You've successfully added chemical association data.
+message.deleteChemicalAssociation=You've successfully deleted the chemical association.
+error.removeComposingElementWithChemicalAssociation=The composing element is used in a chemical association.  Please delete the chemcial association first before removing the composing element.
+error.deleteNanomaterialEntityWithChemicalAssociation=The nanomaterial entity {0} contains a composing element that is used in a chemical association.  Please delete the chemcial association first before deleting the nanomaterial entity.
+error.deleteFunctionalizingEntityWithChemicalAssociation=The functionalizing entity {0} is used in a chemical association.  Please delete the chemcial association first before deleting the functionalizing entity.
+message.addCompositionFile=You've successfully added a composition file {0}.
+message.deleteCompositionFile=You've successfully deleted the composition file.
+message.deleteAnnotations=You've successfully deleted the {0} data.
+error.duplicateAssociatedElementsInAssociation=The two associated elements can not be the same.
 
-editAliquotForm.containerType=Container type
-editAliquotForm.otherContainerType=Other container type
-editAliquotForm.quantity=The container quantity
-editAliquotForm.concentration=The container concentration
-editAliquotForm.volume=The container volume
-editAliquotForm.numberOfAliquots=The number of aliquots
-editAliquotForm.quantityUnit=The container quantity unit
-editAliquotForm.concentrationUnit=The container concentration unit
-editAliquotForm.volumeUnit=The container volume unit
-editAliquotForm.solventConcentration=When solvent is entered, concentration
-editAliquotForm.concentrationSolvent=When concentration is entered, solvent
-editAliquotForm.otherRoom=Other Room
-editAliquotForm.otherFreezer=Other Freezer
-editAliquotForm.otherShelf=Other Shelf
-editAliquotForm.otherBox=Other Box
-error.preEditAliquot.nomatrix=Error in bringing up the Edit Aliquot page: {0}.
-error.editAliquot.nomatrix=Error is saving the edited aliquot information: {0}.
+uploadedFile=Uploading a file
+externalUrl=Entering a URL
+file.title=File Title
+file.title.invalid=File title can not contain special characters.
+file.type=File Type
 
-dateAccessioned=Date Accessioned
-message.searchSample.noResult=No search results were found for given search criteria.
-error.viewSampleDetails.noSamples=Error in showing sample details: {0}.
-error.viewAliquotDetails.noAliquots=Error in showing aliquot details: {0}.
+message.invalidNumber=Invalid number has been converted to 0.
+message.addPhysicalCharacterization=You've successfully added physical characterization data.
+message.addInvitroCharacterization=You've successfully added in vitro characterization data.
+message.deletePhysicalCharacterization=You've successfully deleted the physical characterization.
+message.deleteInvitroCharacterization=You've successfully deleted the in vivo characterization.
+message.deleteCharacterization=You've successfully deleted the characterization.
+message.submitPublication.file=The publication , titled as, {0},  has been successfully updated.
+nanomaterialEntity.elementType=Composing Element Type
+nanomaterialEntity.dendrimer.surfaceGroup=Surface Group Name
 
-sample.containerId=Selection of a Sample Container Name
-sample.aliquotId=Aliquot ID
-error.sampleException=Sample Error: {0}.
-msg.empty.aliquotMatrix=Please click on 'Update Aliquots' button before submitting.
+chemicalAssociationType=Chemical Association Type
+chemicalAssociationBondType=When Association Type is attachment, the Bond Type
+associatedElementA=Choosing an element on the left
+associatedElementB=Choosing an element on the right
+associatedElementAComposingElement=When type of the element on the left is Nanomaterial Entity, choosing a Composing Element
+associatedElementBComposingElement=When type of the element on the right is Nanomaterial Entity, choosing a Composing Element
+error.nullComposingElementAInAssociation=Choosing a composing element on the left is required.
+error.nullComposingElementBInAssociation=Choosing a composing element on the right is required.
+
+nanomaterialEntityType=Nanomaterial Entity Type
+nanomaterialEntityForm.carbonNanotube.diameter=Diameter
+nanomaterialEntityForm.carbonNanotube.averageLength=Average Length
+nanomaterialEntityForm.fullerene.numberOfCarbon=Number of Carbon
+nanomaterialEntityForm.biopolymer.name=Biopolymer Name
+nanomaterialEntityForm.biopolymer.type=Biopolymer Type
+nanomaterialEntityForm.liposome.polymerName=Polymer Name
+nanomaterialEntityForm.emulsion.polymerName=Polymer Name
+nanomaterialEntityForm.polymer.crossLinkDegree=Polymer Cross Link Degree
+nanomaterialEntityForm.elementType=Composing Element Type
+nanomaterialEntityForm.elementName=Composing Element Chemical Name
+
+functionalizingEntityType=Functionalizing Entity Type
+functionalizingEntityName=Functionalizing Entity Chemical Name
+functionalizingEntityForm.value=Functionalizing Entity Value
+functionalizingEntity.functionType=Functionalizing Entity Function Type
+
+characterizationSource=Characterization Source
+numberOfDerivedBioAssayData=Number of Histograms/Charts
+numberOfDataPoints=Number of Data Points
+numberOfConditions=Number of Conditions
+type=Type
+
+nanomaterialEntityForm.dendrimer.generation=Generation
+nanomaterialEntityForm.polymer.crosslinkDegree=Crosslink Degree
+
+achar.characterizationType=Characterization Type
+achar.characterizationName=Characterization Name
+achar.technique.type=When entering technique and instrument information, Technique Type
+achar.instrument.manufacturer=When instrument type is entered, manufacturer
+
+loadDerivedBioAssayDataForm.title=Characterization File Title
+loadDerivedBioAssayDataForm.file=Characterization File
+message.updateDerivedBioAssayData=You've successfully updated meta data for characterization file: {0}.
+
+surface.chargeValue=Charge value
+surface.zetaPotentialValue=Zeta Potential value
+surface.surfaceAreaValue=Surface Area value
+surface.chargeUnit=Charge Unit
+solubility.criticalConcentrationValue=Critical Concentration value
+solubility.criticalConcentrationUnit=Critical Concentration Unit
+shape.minDimension=Minimum Dimension value
+shape.maxDimension=Maximum Dimension value
+shape.type=Shape Type
+morphology.type=Morphology Type
+
+message.addCharacterization=You have successfully saved/updated {0} characterization.
+message.addCharacterization.removeMatrixColumn=To remove a column, please select a column first.
+message.addCharacterization.removeMatrixRow=To remove a row, please click on the delete button next to the row.
+function.linkageType=Linkage Type
+function.linkage.agentType=Linkage Agent Type
+
+message.delete.no.characterizations=There are no characterizations to delete.
+message.delete.characterization=You've successfully deleted the characterization data.
+delete.charIds=At least one characterization
+
+message.searchSample.secure=You have access to the {0} samples out of total {1} samples for sample type {2}.
+message.searchSample.noresult=No samples were found for the given parameters.
+message.searchSample.grid.notAvailable={0} grid node is not available: {1}.
+
+message.remoteSearchSample.noresult=No public samples were found from grid node {0}.
+message.addFunction=You have successfully saved/updated function data.
+
+error.emptyCharacterizationFile=Please remove the empty characterization file/derived data section prior to saving, or fill in characterization file/derived data information.
+error.emptyDerivedDatum=Both derived data name and value are required.
+error.booleanDerivedDatumValue=The datum value for boolean type should be 0 or 1.
+error.derivedDatumFormat=The datum value should be a number.
+error.uniqueDerivedDatum=No two derived data can have the same name, statistics type and category.
+error.characterizationException=Characterization Error: {0}.
+error.compositionException=Composition Error: {0}.
+error.functionException=Function Error: {0}.
+error.sampleeException=Sample Error: {0}.
+
+error.noCharacterizationFile=The characterization file doesn't exist on the server.
+error.emptyAgentTarget=Agent target type can not be empty.
+error.grid.discovery=Error in discovering grid nodes.
+error.grid.notAvailable=Error in searching against grid node {0}.
+message.grid.discovery.none=No grid nodes were found for model {0}.
+
+text.invalid=Search text can only contain alphanumeric characters, plus white spaces, quotes, dashes, and underscores.
+publicationKeyword.invalid=Publication keywords can only contain alphanumeric characters, plus white spaces, quotes, dashes, and underscores.
+
+error.pointOfContact==Error in saving the Point of Contact.
+error.duplicatePointOfContact=The Point of Contact name is already in use.  Please type in a different one
+sampleForm.organizationName=Organization Name
+pointOfContact.updateOtherPOC=You will need to update particle sample if you have add or remove the secondary point of contacts
