--- a/src/gov/nih/nci/cananolab/resources/sample.properties
+++ b/src/gov/nih/nci/cananolab/resources/sample.properties
@@ -139,7 +139,7 @@ error.uniqueDerivedDatum=No two derived data can have the same name, statistics 
 error.characterizationException=Characterization Error: {0}.
 error.compositionException=Composition Error: {0}.
 error.functionException=Function Error: {0}.
-error.sampleeException=Sample Error: {0}.
+error.sampleException=Sample Error: {0}.
 
 error.noCharacterizationFile=The characterization file doesn't exist on the server.
 error.emptyAgentTarget=Agent target type can not be empty.
