--- a/src/gov/nih/nci/cananolab/resources/sample.properties
+++ b/src/gov/nih/nci/cananolab/resources/sample.properties
@@ -8,17 +8,17 @@ errors.float={0} must be a float number.
 error.booleanValue={0}  must be 'true'/'false' or '0'/'1'.
 errors.invalidOtherType='{0}' is an invalid {1} type. It is a pre-defined composition type.
 
-error.derivedDatumValue={0} must be a float number or true/false for value type of boolean.
-error.particle=Nanomaterial Sample Error: {0}
-error.composition=Nanomaterial Sample Composition Error: {0}
-error.characterization=Nanomaterial Sample Characterization Error: {0}
+error.datumValue={0} must be a float number or true/false for value type of boolean.
+error.sample=Sample Error: {0}
+error.composition=Sample Composition Error: {0}
+error.characterization=Sample Characterization Error: {0}
 
-sampleForm.pointOfContact=Primary Point of Contact
-message.deletePrimaryPOC=Can not delete the primary POC.  You can edit the information.
 sampleForm.sampleName=Sample Name
 sampleForm.primaryPOC=Primary Point of Contact
+sampleForm.pointOfContact=Primary Point of Contact
 error.duplicateSample=The sample name is already in use.  Please type in a different one
 
+message.deletePrimaryPOC=Can not delete the primary POC.  You can edit the information.
 message.createSample=You've successfully created the sample.
 message.updateSample=You've successfully updated the sample.
 message.deletePublications=You've successfully deleted the {0} publication.
