added composing element validation message
SVN-Revision: 16059

--- a/src/gov/nih/nci/cananolab/resources/sample.properties
+++ b/src/gov/nih/nci/cananolab/resources/sample.properties
@@ -69,6 +69,8 @@ error.nullComposingElementAInAssociation=Choosing a composing element on the lef
 error.nullComposingElementBInAssociation=Choosing a composing element on the right is required.
 
 nanomaterialEntityType=Nanomaterial Entity Type
+composingElement.type=Composing Element Type
+composingElement.chemicalName=Composing Element Chemical Name
 nanomaterialEntityForm.carbonNanotube.diameter=Diameter
 nanomaterialEntityForm.carbonNanotube.averageLength=Average Length
 nanomaterialEntityForm.fullerene.numberOfCarbon=Number of Carbon
