updated messages for functionalizing entity
SVN-Revision: 16094

--- a/src/gov/nih/nci/cananolab/resources/sample.properties
+++ b/src/gov/nih/nci/cananolab/resources/sample.properties
@@ -79,13 +79,10 @@ nanomaterialEntityForm.biopolymer.type=Biopolymer Type
 nanomaterialEntityForm.liposome.polymerName=Polymer Name
 nanomaterialEntityForm.emulsion.polymerName=Polymer Name
 nanomaterialEntityForm.polymer.crossLinkDegree=Polymer Cross Link Degree
-nanomaterialEntityForm.elementType=Composing Element Type
-nanomaterialEntityForm.elementName=Composing Element Chemical Name
 
-functionalizingEntityType=Functionalizing Entity Type
-functionalizingEntityName=Functionalizing Entity Chemical Name
-functionalizingEntityForm.value=Functionalizing Entity Value
-functionalizingEntity.functionType=Functionalizing Entity Function Type
+functionalizingEntity.type=Functionalizing Entity Type
+functionalizingEntity.name=Functionalizing Entity Chemical Name
+function.type=Function Type
 
 characterizationSource=Characterization Source
 numberOfDerivedBioAssayData=Number of Histograms/Charts
