Update Char form validation
SVN-Revision: 16159

--- a/src/gov/nih/nci/cananolab/resources/sample.properties
+++ b/src/gov/nih/nci/cananolab/resources/sample.properties
@@ -48,6 +48,9 @@ externalUrl=Entering a URL
 file.title=File Title
 file.title.invalid=File title can not contain special characters.
 file.type=File Type
+achar.theFinding.numberOfColumns=Number of Columns
+achar.theFinding.numberOfRows=Number of Row
+achar.theFinding.columnHeaders.columnType=Column Type
 
 message.invalidNumber=Invalid number has been converted to 0.
 message.addPhysicalCharacterization=You've successfully added physical characterization data.
