Update Char Finding form validation.
SVN-Revision: 16200

--- a/src/gov/nih/nci/cananolab/resources/sample.properties
+++ b/src/gov/nih/nci/cananolab/resources/sample.properties
@@ -1,4 +1,5 @@
 # submit messages
+errors.message={0}
 errors.required={0} is required.
 errors.invalid={0} is invalid.
 errors.integer={0} must be an integer number.
@@ -48,9 +49,10 @@ externalUrl=Entering a URL
 file.title=File Title
 file.title.invalid=File title can not contain special characters.
 file.type=File Type
-achar.theFinding.numberOfColumns=Number of Columns
-achar.theFinding.numberOfRows=Number of Row
-achar.theFinding.columnHeaders.columnType=Column Type
+achar.theFinding.numberOfColumns=Please enter Number of Columns and then click Update button in Finding Info form.
+achar.theFinding.numberOfRows=Please enter Number of Rows and then click Update button in Finding Info form.
+achar.theFinding.columnHeaders.columnType=Please enter Column Type and Column Name in Finding Info form.
+achar.theFinding.emptyCell=Please enter value in each cell of finding table in Finding Info form.
 
 message.invalidNumber=Invalid number has been converted to 0.
 message.addPhysicalCharacterization=You've successfully added physical characterization data.
