--- a/src/gov/nih/nci/cananolab/resources/sample.properties
+++ b/src/gov/nih/nci/cananolab/resources/sample.properties
@@ -154,7 +154,7 @@ message.grid.discovery.none=No grid nodes were found for model {0}.
 text.invalid=Search text can only contain alphanumeric characters, plus white spaces, quotes, dashes, and underscores.
 publicationKeyword.invalid=Publication keywords can only contain alphanumeric characters, plus white spaces, quotes, dashes, and underscores.
 
-error.pointOfContact==Error in saving the Point of Contact.
+error.pointOfContact=Error in saving the Point of Contact.
 error.duplicatePointOfContact=The Point of Contact name is already in use.  Please type in a different one
 sampleForm.organizationName=Organization Name 
 pointOfContact.updateOtherPOC=You will need to update particle sample if you have add or remove the secondary point of contacts
