--- a/src/gov/nih/nci/cananolab/resources/publication.properties
+++ b/src/gov/nih/nci/cananolab/resources/publication.properties
@@ -19,9 +19,14 @@ submitPublicationForm.publication.researchArea=Research Category
 publication.title=Title
 publication.title.invalid=Publication title can not contain special characters.
 publication.particleType.invalid=Particle Type can not contain special characters.
+publication.domainFile.pubMedId=PubMed ID
+publication.domainFile.digitalObjectId=Digital Object ID
+publication.uploadedFile=Uploading a file
+publication.externalUrl=Entering a file URL
+
 message.searchPublication.noresult=No publications were found for the given parameters
-error.duplicatePublication=Publication already exists {0}.
 message.remoteSearchPublication.noresult=No public publications were found from grid node {0}.
+error.duplicatePublication=Publication already exists {0}.
 error.publicationException=Publication Error: {0}.
 error.noPublicationFile=The publication file doesn't exist on the server.
 error.grid.discovery=Error in discovering grid nodes.
