updated finding message
SVN-Revision: 16296

--- a/src/gov/nih/nci/cananolab/resources/sample.properties
+++ b/src/gov/nih/nci/cananolab/resources/sample.properties
@@ -49,8 +49,8 @@ externalUrl=Entering a URL
 file.title=File Title
 file.title.invalid=File title can not contain special characters.
 file.type=File Type
-achar.theFinding.numberOfColumns=Please enter Number of Columns and then click Update button in Finding Info form.
-achar.theFinding.numberOfRows=Please enter Number of Rows and then click Update button in Finding Info form.
+achar.theFinding.numberOfColumns=Please enter column number and click the Update button in Finding Info form.
+achar.theFinding.numberOfRows=Please enter row number and click the Update button in Finding Info form.
 achar.theFinding.columnHeaders.columnType=Please enter Column Type and Column Name in Finding Info form.
 achar.theFinding.emptyCell=Please enter value in each cell of finding table in Finding Info form.
 
