added advanced sample search messages
SVN-Revision: 16361

--- a/src/gov/nih/nci/cananolab/resources/sample.properties
+++ b/src/gov/nih/nci/cananolab/resources/sample.properties
@@ -132,6 +132,7 @@ message.searchSample.secure=You have access to the {0} samples out of total {1} 
 message.searchSample.noresult=No samples were found for the given parameters.
 message.searchSample.grid.notAvailable={0} grid node is not available: {1}.
 
+message.advancedSampleSearch.noresult=No samples were found for the given advanced search parameters. 
 message.remoteSearchSample.noresult=No public samples were found from grid node {0}.
 message.addFunction=You have successfully saved/updated function data.
 
