--- a/src/version.properties
+++ b/src/version.properties
@@ -1,2 +1,2 @@
-release.version=1.4.1
-build.tag=$HeadURL$
+release.version=1.5
+build.tag=$HeadURL\: https\://gforge.nci.nih.gov/svnroot/calab/cananolab/trunk/src/version.properties $
