added additional parameter
SVN-Revision: 16581

--- a/grid.properties
+++ b/grid.properties
@@ -6,8 +6,10 @@ country=US
 city=Rockville
 zipcode=20852
 state=MD
-street=2115 East Jefferson Street
+street1=2115 East Jefferson Street
+street2=
 affliation=NCICB
 email=
+phone=
 first.name=
 last.name=
